# matrix

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
mathfn/: Cargo.toml
mathfn/proc_macros/: Cargo.toml
mathfn/proc_macros/src/: lib.rs
mathfn/src/: lib.rs
matrix/: Cargo.toml
matrix/src/: lib.rs  matrix.rs
src/: collections.rs  game.rs  lib.rs  main.rs  maths.rs  matrix.rs  research.rs
src/collections/: matrix.rs
src/trash/: matrix.rs
utils/: Cargo.toml
utils/src/: lib.rs
