[package]
name = "matlib"
version = "0.1.0"
edition = "2024"

[dependencies]
proc_macros = { path = "macros" }
num-traits = "0.2"
crossterm = "0.29.0"

[profile.release]
opt-level = 3          # Maximum runtime optimization
lto = "fat"            # Aggressive LTO across all crates
codegen-units = 1      # Allows compiler to optimize across crate boundaries
panic = "abort"        # Removes unwinding overhead
strip = true           # Removes debug symbols to reduce binary size   
