[package]
name = "matlib"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "macros" }
mathfn = { path = "mathfn" }
matrix = { path = "matrix" }
utils = { path = "utils" }

crossterm = "0.29.0"
syn = { version = "2", features = ["full"] }

[profile.release]
opt-level = 3          # Maximum runtime optimization
lto = "fat"            # Aggressive LTO across all crates
codegen-units = 1      # Allows compiler to optimize across crate boundaries
panic = "abort"        # Removes unwinding overhead
strip = true           # Removes debug symbols to reduce binary size   
